# interview-agent-py

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_vector_store.py  002_resumes.py  003_llm_provider_config.py  004_interviews.py  005_knowledge_bases.py  006_rag_chat.py  007_llm_global_setting_and_voice_config.py  008_interview_schedule.py  009_voice_interview.py  010_timezone_aware.py  011_knowledge_base_metadata.py
app/: main.py
app/api/: deps.py  errors.py  exception_handlers.py  rate_limit.py  responses.py
app/config/: settings.py
app/domain/: errors.py
app/graphs/: evaluation.py
app/infrastructure/: json_utils.py
app/prompts/: interview-schedule-parse-system.st  voice-interview-dialogue-system.st  voice-interview-dialogue-user.st
app/skills/: voice-opening.yml
doc/: migration-plan.md
docs/: api.md  migration-plan.md  review-r1-r2-fix-plan.md  workflow.md
docs/adr/: 0001-reuse-java-frontend.md  0002-fresh-database-alembic.md  0003-result-wrapper-http-200.md  0004-config-split-static-dynamic.md  0005-single-worker-asyncio.md  0006-handwritten-pgvector.md  0007-no-auth-optional-user-ratelimit.md  (+8 more)
frontend/: .env.example  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: check_services.py
tests/: test_architecture.py  test_doc_drift.py  test_exception.py  test_health.py  test_main.py  test_migration_chain.py  test_timezone.py
(+221 files in other folders)
