[project]
name = "interview-agent-py"
version = "0.1.0"
description = "基于 LangGraph 的智能面试官平台后端"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "filetype>=1.2.0",
    "json-repair>=0.61.4",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pgvector>=0.5.0",
    "pydantic-settings>=2.14.2",
    "pypinyin>=0.55.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "redis>=8.0.1",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
    "unstructured>=0.21.5",
    "uvicorn[standard]>=0.51.0",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
native-tls = true

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["check_services.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["N818"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
